--- a/audio_uploader/templates/audio.html
+++ b/audio_uploader/templates/audio.html
@@ -13,16 +13,17 @@ body{
 </head>
 <body>
 	{{ state }}
-	<form action="/audio/" method="post">
+	<form action="templates/audio/" method="post">{% csrf_token %}
 		{% if next %}
 		<input type="hidden" name="next" value="{{ next }}" />
 		{% endif %}
-		Username:
-		<input type="text" name="username" value="{{ username}}" /><br />
-		Password:
-		<input type="password" name="password" value="" /><br />
+		Audio:
+		<input type="text" name="username" value="{{ username }}" /><!-- <br />-->
+		<!--Password:
+		<input type="password" name="password" value="" /><br /> -->
 
-		<input type="submit" value="Log In" />
+		<input type="submit" value="Browse" /><br />
+		<input type="submit" value="Upload" />
 	</form>
-</body>
+</body> 
 </html> 
